crates/varpulis-parser/tests/snapshots/golden_parser_tests__parser_function_decl.vpl.snap
---
source: crates/varpulis-parser/tests/golden_parser_tests.rs
expression: summary
---
functions:
  - double
statement_count: 2
streams:
  - Doubled
