crates/varpulis-parser/tests/snapshots/golden_parser_tests__parser_simple_filter.vpl.snap
---
source: crates/varpulis-parser/tests/golden_parser_tests.rs
expression: summary
---
functions: []
statement_count: 1
streams:
  - HighTemp
